# HomeVox

./: .gitignore  CHANGELOG.md  README.md  rust-toolchain.toml
backend/: Cargo.toml  README.md  go.mod  go.sum
backend/cmd/fake-vision/: main.go
backend/cmd/server/: main.go
backend/internal/ai/: client.go  client_test.go
backend/internal/api/: image_fixture_test.go  project_routes_test.go  projects.go  router.go  router_test.go
backend/internal/config/: config.go  config_test.go
backend/internal/db/: postgres.go
backend/internal/floorplan/: parser.go  parser_test.go  types.go
backend/internal/imagevalidate/: image.go  image_test.go
backend/internal/project/: project.go  project_test.go
backend/internal/storage/: s3.go
backend/src/: main.rs
backend/src/api/: health.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: mod.rs
backend/src/services/ai/: mod.rs
backend/src/services/export/: mod.rs
backend/src/services/floorplan/: mod.rs
backend/src/services/voxel/: mod.rs
docs/: PRODUCT_PLAN.md  ai-parse-result.json  issue-19-design-parity.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: production.spec.ts
frontend/src/: App.css  App.tsx  e2eBridge.disabled.ts  e2eBridge.ts  export.test.ts  export.ts  floorplanEditor.test.ts  floorplanEditor.ts  floorplanUi.test.ts  floorplanUi.ts  index.css  (+10 more)
scripts/: bootstrap-wasm.sh  build-wasm.sh  run-production-browser-e2e.sh
wasm/: Cargo.toml
wasm/src/: lib.rs
